# mqexec-tng

./: CMakeLists.txt  executor_config.json
executor/: CMakeLists.txt  executor.cpp  harness.cpp
module/: .backend.cpp.swp  .frontend.cpp.swp  CMakeLists.txt  backend.cpp  common.h  frontend.cpp  module.h
shared/: CMakeLists.txt  common.h  mqexec_shared.h
